--- a/curso_base/src/styles.css
+++ b/curso_base/src/styles.css
@@ -21,3 +21,17 @@ body {
 canvas {
   touch-action: none;
 }
+
+.container {
+  z-index: 3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* width: 100%; */
+  /* height: 100%; */
+}
+
+/* .header{
+  display: flex;
+  justify-content: space-between;
+} */
