--- a/curso_base/src/styles.css
+++ b/curso_base/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,600;1,900&display=swap');
+
 html {
   font-family: 'Inter', sans-serif;
 }
@@ -85,11 +87,11 @@ section {
 
 .section--container h1 {
   font-weight: 900;
-  font-size: 16vw;
+  font-size: 12vw;
   letter-spacing: -6px;
   font-style: italic;
   width: 30%;
-  line-height: 15vh;
+  line-height: 20vh;
   font-family: 'Nunito Sans', sans-serif;
 }
 
