--- a/curso_base/src/styles.css
+++ b/curso_base/src/styles.css
@@ -3,11 +3,6 @@
 html {
   font-family: 'Inter', sans-serif;
 }
-@supports (font-variation-settings: normal) {
-  html {
-    font-family: 'Inter var', sans-serif;
-  }
-}
 
 * {
   box-sizing: border-box;
@@ -35,6 +30,7 @@ canvas {
 }
 
 /* INTRO */
+
 .container {
   position: absolute;
   top: 0;
@@ -139,7 +135,6 @@ button:hover {
   transform: scale(1.1);
 }
 
-
 /* CUSTOMIZER */
 
 .customizer {
@@ -217,3 +212,30 @@ button:hover {
   box-shadow: inset -250px 0 0 0 black;
 }
 
+/* MOBILE ADJUSTMENTS */
+
+@media screen and (max-width: 600px) {
+  .section--container {
+    margin-left: 15vw;
+  }
+
+  .section--container h1 {
+    font-size: 8rem;
+    letter-spacing: -6px;
+    line-height: 6rem;
+  }
+
+  .color-options {
+    margin-bottom: 20px;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    right: 40px;
+    transform: translateY(-50%);
+  }
+
+  .support--content {
+    top: -10%;
+    left: 0;
+  }
+}
